[package]
name = "pipe-down-latinx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = "0.6.3"
cronjob = "0.4.17"
dotenvy = "0.15.7"
kv = "0.24.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twapi-v2 = { version = "0.15.1", features = ["oauth10a", "rustls-tls", "upload"], default-features = false }
url = "2.5.2"
